adding the info for having the app on the phone

--- a/eas.json
+++ b/eas.json
@@ -1,14 +1,16 @@
 {
   "build": {
     "production": {
-      "workflow": "managed",
       "distribution": "internal",
       "android": {
         "buildType": "apk"
       }
+      ,
+      "ios": {
+        "simulator": false
+      }
     },
     "apk": {
-      "workflow": "managed",
       "android": {
         "buildType": "apk"
       }
