--- a/app.json
+++ b/app.json
@@ -9,7 +9,8 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+  "supportsTablet": true,
+  "bundleIdentifier": "com.stesto123.etfanalysis"
     },
     "android": {
       "package": "com.stesto123.etfanalysis",
@@ -20,9 +21,19 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "9d00bdb9-03e8-44a3-bb98-dc5f867bc67a"
+      }
     }
   }
 }
