chore: update dependencies in package.json
- upgraded expo from ^54.0.2 to ~54.0.10
- upgraded expo-router from ~6.0.1 to ~6.0.8
- upgraded react-native-reanimated from ~4.1.0 to ~4.1.1
- added semver as a new dependency with version ^7.7.2

--- a/app.json
+++ b/app.json
@@ -17,6 +17,9 @@
       "eas": {
         "projectId": "9d00bdb9-03e8-44a3-bb98-dc5f867bc67a"
       }
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
