--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "^54.0.2",
+    "expo": "~54.0.10",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.7",
     "expo-constants": "~18.0.8",
@@ -28,7 +28,7 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-navigation-bar": "~5.0.8",
-    "expo-router": "~6.0.1",
+    "expo-router": "~6.0.8",
     "expo-splash-screen": "~31.0.9",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -40,14 +40,15 @@
     "react-native": "0.81.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "semver": "^7.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
