--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^1.36.0",
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^15.0.2",
     "@lucide/lab": "^0.1.2",
@@ -29,6 +30,7 @@
     "expo-linking": "~8.0.8",
     "expo-navigation-bar": "~5.0.8",
     "expo-router": "~6.0.8",
+    "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.9",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
