--- a/app.json
+++ b/app.json
@@ -19,7 +19,9 @@
       }
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-secure-store",
+      "expo-web-browser"
     ]
   }
 }
