--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^1.36.0",
+    "@clerk/clerk-expo": "^2.15.4",
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^15.0.2",
     "@lucide/lab": "^0.1.2",
@@ -20,7 +20,8 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~54.0.10",
+    "expo": "~54.0.11",
+    "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.7",
     "expo-constants": "~18.0.8",
@@ -29,13 +30,13 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-navigation-bar": "~5.0.8",
-    "expo-router": "~6.0.8",
+    "expo-router": "~6.0.9",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.9",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
+    "expo-web-browser": "~15.0.8",
     "lucide-react-native": "^0.475.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
