--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~54.0.11",
+    "expo": "54.0.12",
     "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.7",
@@ -30,7 +30,7 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-navigation-bar": "~5.0.8",
-    "expo-router": "~6.0.9",
+    "expo-router": "~6.0.10",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.9",
     "expo-status-bar": "~3.0.8",
