feat(auth): implement Clerk JWT template support and enhance token management

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YOUR_CLERK_KEY
+# Optional: if you use Clerk JWT Templates to mint API tokens
+# Create a template in Clerk dashboard and put its name below
+EXPO_PUBLIC_CLERK_JWT_TEMPLATE=mobile
