feat(auth): enhance token management with debug logging and template support

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YOUR_CLERK_KEY
-# Optional: if you use Clerk JWT Templates to mint API tokens
-# Create a template in Clerk dashboard and put its name below
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y2xvc2UtYnVmZmFsby0yMi5jbGVyay5hY2NvdW50cy5kZXYk
 EXPO_PUBLIC_CLERK_JWT_TEMPLATE=mobile
+
+# Debug: log auth token when attached to requests
+#   - true|1 -> log truncated token (safe-ish)
+#   - full   -> log full token (only for local debugging!)
+#   - unset  -> no logging
+EXPO_PUBLIC_LOG_AUTH_TOKEN=full
