--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
+    "start:local": "cross-env EXPO_NO_TELEMETRY=1 EXPO_PUBLIC_API_TARGET=local expo start",
+    "start:cloud": "cross-env EXPO_NO_TELEMETRY=1 EXPO_PUBLIC_API_TARGET=cloud expo start",
     "build:web": "expo export --platform web",
     "lint": "expo lint",
     "android": "expo run:android",
@@ -20,7 +22,7 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "54.0.12",
+    "expo": "54.0.21",
     "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.7",
@@ -29,18 +31,18 @@
     "expo-haptics": "~15.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-navigation-bar": "~5.0.8",
-    "expo-router": "~6.0.10",
+    "expo-navigation-bar": "~5.0.9",
+    "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.9",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
+    "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.8",
     "lucide-react-native": "^0.475.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
@@ -56,6 +58,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.10",
+    "cross-env": "^7.0.3",
     "eslint": "^9.0.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
