--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^9.0.0",
     "eslint-config-expo": "~10.0.0",
+    "expo-module-scripts": "^5.0.7",
     "typescript": "~5.9.2"
   }
 }
