feat: Update app name and slug in app.json; add new app icon SVG

--- a/app.json
+++ b/app.json
@@ -1,9 +1,10 @@
 {
   "expo": {
-    "name": "bolt-expo-nativewind",
-    "slug": "bolt-expo-nativewind",
+    "name": "ETF Analysis",
+    "slug": "etf-analysis",
     "version": "1.0.0",
     "scheme": "etfanalysis",
+    "icon": "./assets/images/icon.png",
     "web": {
       "bundler": "metro",
       "output": "single",
