--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@shopify/react-native-skia": "^2.4.6",
     "expo": "54.0.22",
     "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.7",
@@ -45,6 +46,7 @@
     "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-gifted-charts": "^1.4.69",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -53,7 +55,8 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
-    "semver": "^7.7.2"
+    "semver": "^7.7.2",
+    "victory-native": "^36.6.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
