--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "semver": "^7.7.2",
-    "victory-native": "^36.6.6"
+    "victory-native": "36.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
